--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,11 @@ group = project.maven_group
 
 repositories {
 	maven {
-		name = "Ladysnake Libs"
-		url = "https://dl.bintray.com/ladysnake/libs"
+		name = 'Ladysnake Libs'
+		url = 'https://dl.bintray.com/ladysnake/libs'
+	}
+	maven {
+		url = "https://dl.bintray.com/redstoneparadox/mods"
 	}
 }
 
@@ -31,29 +34,37 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.8.6'
 
 	// mod dependencies
-	modApi("me.shedaniel.cloth:config-2:4.8.2") {
-		exclude(group: "net.fabricmc.fabric-api")
+	// cloth config & autoconfig1u
+	modApi('me.shedaniel.cloth:config-2:4.8.2') {
+		exclude(group: 'net.fabricmc.fabric-api')
 	}
-	modApi("me.sargunvohra.mcmods:autoconfig1u:3.2.2") {
-		exclude(group: "net.fabricmc.fabric-api")
+	modApi('me.sargunvohra.mcmods:autoconfig1u:3.2.2') {
+		exclude(group: 'net.fabricmc.fabric-api')
 	}
+	// cardinal components
 	// Replace modImplementation with modApi if you expose components in your own API
-	modImplementation "io.github.onyxstudios:Cardinal-Components-API:2.7.1"
+	modImplementation 'io.github.onyxstudios:Cardinal-Components-API:2.7.1'
 
-	modImplementation "io.github.prospector:modmenu:1.14.6+build.31"
+	modImplementation 'io.github.prospector:modmenu:1.14.6+build.31'
+
+	// OakTree (GUI lib)
+	modApi("io.github.redstoneparadox:OakTree:${project.oak_tree_version}") {
+		exclude group: 'net.fabricmc.fabric-api'
+	}
+	include "io.github.redstoneparadox:OakTree:${project.oak_tree_version}"
 
 }
 
 processResources {
-	inputs.property "version", project.version
+	inputs.property 'version', project.version
 
 	from(sourceSets.main.resources.srcDirs) {
-		include "fabric.mod.json"
-		expand "version": project.version
+		include 'fabric.mod.json'
+		expand 'version': project.version
 	}
 
 	from(sourceSets.main.resources.srcDirs) {
-		exclude "fabric.mod.json"
+		exclude 'fabric.mod.json'
 	}
 }
 
@@ -61,17 +72,17 @@ processResources {
 // this fixes some edge cases with special characters not displaying correctly
 // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
-	options.encoding = "UTF-8"
+	options.encoding = 'UTF-8'
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 // if it is present.
 // If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
+	classifier = 'sources'
 	from sourceSets.main.allSource
 }
 
 jar {
-	from "LICENSE"
+	from 'LICENSE'
 }
