--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ archives_base_name=cmt
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.24.1+build.412-1.16
+# OAK TREE GUI LIB VERSION
+oak_tree_version=0.4.2-beta
