--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'fabric-loom' version '0.5-SNAPSHOT'
 	id 'maven-publish'
+	id "io.freefair.lombok" version "5.2.1"
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
