--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.3
-yarn_mappings=1.16.3+build.47
-loader_version=0.10.2+build.210
+minecraft_version=1.16.4
+yarn_mappings=1.16.4+build.7
+loader_version=0.10.8
 # Mod Properties
 mod_version=1.0-SNAPSHOT
 maven_group=com.enderzombi102
 archives_base_name=cmt
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.24.1+build.412-1.16
+fabric_version=0.28.4+1.16
 # OAK TREE GUI LIB VERSION
 oak_tree_version=0.4.2-beta
