--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,22 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.7
-loader_version=0.10.8
+    # check these on https://modmuss50.me/fabric.html
+    minecraft_version=1.16.5
+    yarn_mappings=1.16.5+build.1
+    loader_version=0.11.0
 # Mod Properties
-mod_version=1.0-SNAPSHOT
-maven_group=com.enderzombi102
-archives_base_name=cmt
+    mod_version=1.0-SNAPSHOT
+    maven_group=com.enderzombi102
+    archives_base_name=cmt
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.28.4+1.16
-# OAK TREE GUI LIB VERSION
-oak_tree_version=0.4.2-beta
+fabric_version=0.29.3+1.16
+# libs versions
+    gson_version=2.8.6
+# mod lib versions
+    modmenu_version=1.14.6+build.31
+    cardinal_components_version=2.7.1
+    cloth_config_version=4.8.2
+    libnetworkstack_version=0.4.0
+    mcgui_version=1.0.0-SNAPSHOT
