the current mcgui release doesn't jhave the things i need
Signed-off-by: ENDERZOMBI102 <enderzombi102.end@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'fabric-loom' version '0.5-SNAPSHOT'
 	id 'maven-publish'
 	id "io.freefair.lombok" version "5.2.1"
+	id 'idea'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
