--- a/gradle.properties
+++ b/gradle.properties
@@ -10,13 +10,18 @@ org.gradle.jvmargs=-Xmx1G
     maven_group=com.enderzombi102
     archives_base_name=cmt
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.29.3+1.16
+    # check this on https://modmuss50.me/fabric.html
+    fabric_version=0.29.3+1.16
 # libs versions
     gson_version=2.8.6
+    jankson_version=1.1.0
 # mod lib versions
+    autoconfig_version=3.2.2
     modmenu_version=1.14.6+build.31
     cardinal_components_version=2.7.1
     cloth_config_version=4.8.2
     libnetworkstack_version=0.4.0
-    mcgui_version=1.0.0-SNAPSHOT
+    spruceui_version=2.1.4-1.16
+# mod integration versions
+    rhino_file=3187177
+    kubejs_file=3202130
