--- a/build.gradle
+++ b/build.gradle
@@ -1,111 +1,82 @@
 plugins {
-	id 'fabric-loom' version '0.5-SNAPSHOT'
-	id 'maven-publish'
-	id 'io.freefair.lombok' version '5.2.1'
+	id 'fabric-loom' version '0.9-SNAPSHOT'
+	id 'com.github.ben-manes.versions' version '0.39.0'
+	id 'java'
 	id 'idea'
 }
-
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
 repositories {
-	jcenter()
 	mavenCentral()
 	maven {
-		name = 'Ladysnake Libs'
-		url = 'https://dl.bintray.com/ladysnake/libs'
+		name 'AperLambda'
+		url 'https://aperlambda.github.io/maven'
 	}
 	maven {
-		name = "BuildCraft"
-		url = 'https://mod-buildcraft.com/maven'
+		name 'Gegy'
+		url 'https://maven.gegy.dev'
 	}
 	maven {
-		name = 'AperLambda'
-		url = 'https://aperlambda.github.io/maven'
+		name = 'Ladysnake Mods'
+		url = 'https://ladysnake.jfrog.io/artifactory/mods'
 	}
-	maven {
-		name = ''
-		url 'https://www.cursemaven.com'
-		content {
-			includeGroup 'curse.maven'
-		}
-	}
-	maven { url 'https://jitpack.io' }
+	maven { url 'https://maven.terraformersmc.com/releases/' }
+	maven { url 'https://maven.saps.dev/minecraft' }
+	maven { url 'https://maven.shedaniel.me/' }
 }
 
 minecraft {
-	accessWidener 'src/main/resources/emr.accesswidener'
+	accessWidener 'src/main/resources/cmt.accesswidener'
 }
 
 dependencies {
-	//to change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	minecraft "com.mojang:minecraft:$minecraft_version"
+	mappings "net.fabricmc:yarn:$yarn_mappings:v2"
+	modImplementation "net.fabricmc:fabric-loader:$loader_version"
 
 	// Fabric API
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:$fabric_version"
 
-	// non-mod dependencies
-	implementation "com.google.code.gson:gson:${gson_version}"
-	implementation "blue.endless:jankson:${jankson_version}"
+	// --- lib dependencies ---
+	implementation "blue.endless:jankson:$jankson_version"
 
-	// mod dependencies
-	// cloth config & autoconfig1u
-	modApi("me.shedaniel.cloth:config-2:${cloth_config_version}") {
-		exclude(group: 'net.fabricmc.fabric-api')
+	// --- mod dependencies ---
+	// cloth config
+	modApi("me.shedaniel.cloth:cloth-config-fabric:$cloth_config_version") {
+		exclude(group: "net.fabricmc.fabric-api")
 	}
-	modApi("me.sargunvohra.mcmods:autoconfig1u:${autoconfig_version}") {
-		exclude(group: 'net.fabricmc.fabric-api')
-	}
+	// modmenu
+	modImplementation "com.terraformersmc:modmenu:$modmenu_version"
+
 	// cardinal components
-	// Replace modImplementation with modApi if you expose components in your own API
-	modImplementation "io.github.onyxstudios:Cardinal-Components-API:${cardinal_components_version}"
-
-	modImplementation "io.github.prospector:modmenu:${modmenu_version}"
-
-	// network stack
-	modCompile "alexiil.mc.lib:libnetworkstack-base:${libnetworkstack_version}"
+	include modImplementation( "io.github.onyxstudios:Cardinal-Components-API:$cca_version" )
 
 	// GUI
-	modImplementation "com.github.lambdaurora:spruceui:${spruceui_version}"
+	include modImplementation( "dev.lambdaurora:spruceui:$spruceui_version" )
+	//	include "dev.lambdaurora:spruceui:$spruceui_version"
 
-	// KubeJS integration
-	modRuntime("curse.maven:kubejs-fabric-395864:${kubejs_file}")
-	modRuntime("curse.maven:rhino-416294:${rhino_file}")
-
-	// other
-
-
+	// --- compat/integration dependencies ---
+	// KubeJS
+	modRuntime "dev.latvian.mods:kubejs-fabric:$kubejs_version"
 }
 
 processResources {
 	inputs.property 'version', project.version
 
-	from(sourceSets.main.resources.srcDirs) {
-		include 'fabric.mod.json'
-		expand 'version': project.version
-	}
+	duplicatesStrategy = DuplicatesStrategy.INCLUDE
 
-	from(sourceSets.main.resources.srcDirs) {
-		exclude 'fabric.mod.json'
+	filesMatching('fabric.mod.json') {
+		expand 'version': project.version
 	}
 }
 
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
 	classifier = 'sources'
 	from sourceSets.main.allSource
