--- a/gradle.properties
+++ b/gradle.properties
@@ -2,26 +2,22 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
     # check these on https://modmuss50.me/fabric.html
-    minecraft_version=1.16.5
-    yarn_mappings=1.16.5+build.1
-    loader_version=0.11.0
+    minecraft_version=1.17
+    yarn_mappings=1.17+build.13
+    loader_version=0.11.6
 # Mod Properties
-    mod_version=1.0-SNAPSHOT
+    mod_version=1.0.0
     maven_group=com.enderzombi102
     archives_base_name=cmt
 # Dependencies
     # check this on https://modmuss50.me/fabric.html
-    fabric_version=0.29.3+1.16
+    fabric_version=0.36.0+1.17
 # libs versions
-    gson_version=2.8.6
-    jankson_version=1.1.0
+    jankson_version=1.2.1
 # mod lib versions
-    autoconfig_version=3.2.2
-    modmenu_version=1.14.6+build.31
-    cardinal_components_version=2.7.1
-    cloth_config_version=4.8.2
-    libnetworkstack_version=0.4.0
-    spruceui_version=2.1.4-1.16
+    modmenu_version=2.0.2
+    cca_version=3.0.0
+    cloth_config_version=5.0.34
+    spruceui_version=3.2.0+1.17
 # mod integration versions
-    rhino_file=3187177
-    kubejs_file=3202130
+    kubejs_version=1605.3.10-build.27
